--- a/index.html
+++ b/index.html
@@ -405,15 +405,15 @@
                 <div class="cbp-qtcontent">
                     <img src="assets/images/client-1.jpg" alt="client-1" />
                     <blockquote>
-                      <p>Work with John was a pleasure. He understood exactly what I wanted and created an awesome site for my company.</p>
-                      <footer>Pino Caruso</footer>
+                      <p>哎呀，这张照片被夹了，是青春的回忆呀，凑合着看吧！这就是本博主我咯，长得磕碜，技术还不咋地，但是有一颗永远骚动的心，如果你是技术大牛，还望给小弟指点迷津。期待......</p>
+                      <footer>小瓶盖</footer>
                     </blockquote>
                 </div>
                 <div class="cbp-qtcontent">
                     <img src="assets/images/client-2.jpg" alt="client-2" />
                     <blockquote>
-                      <p>I'm really happy with the results. Get 100% satisfaction is difficult but Alex got it without problems.</p>
-                      <footer>Jane Doe</footer>
+                      <p>一个人事业上的成功，只要15%是由于他的专业技术，另外的85%要依赖人际关系，外事技巧。软与硬是相对而言的。专业的技术是硬本领，善于处理人际关系的交际本领则是软本领。</p>
+                      <footer>卡耐基</footer>
                     </blockquote>
                 </div>
 
@@ -440,7 +440,7 @@
 						<h2 class="pfblock-title">给我来信哦</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							不要只顾着工作，多多享受下生活，谈人生，聊理想，可以给我来信
+							不要只顾着工作，多多享受下生活，谈人生，聊理想，可以给我来信(seven@smallmi.com)，以下留言功能正在完善中---，请见谅！
 						</div>
 					</div>
 
@@ -490,18 +490,18 @@
 				<div class="col-sm-12">
 
 					<ul class="social-links">
-						<li><a href="index.html#" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
+						<li><a href="index.html#" class="wow fadeInUp"><i class="fa fa-linux"></i></a></li>
+						<li><a href="http://wpa.qq.com/msgrd?V=1&uin=774238984&amp;Site=www.smallmi.net&amp&Menu=yes" target=blank class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-qq"></i></a></li>
+						<li><a href="#testimonials" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-weixin"></i></a></li>
+						<li><a href="http://weibo.com/2264083480/profile?topnav=1&wvr=6&is_all=1" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-tencent-weibo"></i></a></li>
+						<li><a href="mailto:seven@smallmi.com" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
 
 					<p class="heart">
-                        Made with <span class="fa fa-heart fa-2x animated pulse"></span> in Nottingham
+						小瓶盖 <span class="fa fa-heart fa-2x animated pulse"></span> 制作
                     </p>
                     <p class="copyright">
-                        © 2015 John Doe | Images: <a href="https://unsplash.com/">Unsplash</a> & <a href="http://zoomwalls.com/">Zoomwalls</a>
+                        © 2016 如有雷同 | 纯属巧合<a href="http://www.smallmi.com/">SmallMI</a> & <a href="http://www.smallmi.com.cn/">SmallMICN</a>
 					</p>
 
 				</div>
